Fixed footer overlapping the body

--- a/index.css
+++ b/index.css
@@ -1,12 +1,3 @@
-body {
-	text-align: center;
-	display: flex;
-	justify-content: center;
-	margin: 0;
-	background: linear-gradient(to bottom, rgb(145, 213, 218), rgb(24, 40, 119));
-	font-family: Verdana, Geneva, Tahoma, sans-serif;
-	overflow-y: hidden;
-}
 a {
 	text-decoration: none;
 	color: rgb(23, 19, 249);
@@ -68,26 +59,38 @@ a:hover {
 	animation: glow 2.5s ease-in-out infinite alternate, rotate 6s infinite linear;
 }
 
-/* ------------------------ */
+/* TOP LEVEL ELEMENTS ------------------------ */
+html, body {
+	min-height: 100vh;
+	margin: 0;
+}
+body {
+	text-align: center;
+	display: flex;
+	justify-content: center;
+	background: linear-gradient(to bottom, rgb(145, 213, 218), rgb(24, 40, 119));
+	background-attachment: fixed;
+	font-family: Verdana, Geneva, Tahoma, sans-serif;
+	overflow-y: scroll;
+}
 #gradient-border {
-	width: 70%;
-	margin-top: 2%;
+	width: 70vw;
+	min-height: min-content;
+	margin-top: 2dvh;
 	padding: 5px;
 	padding-bottom: 0;
 	border-radius: 20px 20px 0 0;
 	background: linear-gradient(to bottom, rgb(255, 242, 0), red);
 }
 #main-wrapper {
-	height: 100%;
-	/* border: 3px solid #111; */
+	min-height: 100%;
 	border-radius: 15px 15px 0 0;
+	box-sizing: border-box;
 	
 	background: #c1e4f1;
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
-	/* background: #d7fd00; */
-	/* background: #c2e400; */
 }
 #content {
 	padding: 20px;
